[build-system]
requires = [
    "setuptools",
    "scipy",
    "wheel",
    "Cython",
    "pybind11",
    "numpy",
    
]
build-backend = "setuptools.build_meta"

[project]
name="UQPyL"
description="A package for uncertainty quantification and parameter optimization with surrogate models."
license = { file = "LICENSE.md" }
dependencies = [
  "numpy",
  "scipy",
]
version="2.0.1"