cmake_minimum_required(VERSION 3.18..3.20)

project(libsvm)
set(pybind11_DIR D:/Anaconda3/envs/SCI1/Lib/site-packages/pybind11/share/cmake/pybind11)
set(xtensor_DIR ./xtensor/share/cmake/xtensor)
set(xtl_DIR ./xtl/share/cmake/xtl)
set(xtensor-python_DIR ./tensorPy/lib/cmake/xtensor-python)
set(xtensor-blas_DIR ./xtensor_blas/lib/cmake/xtensor-blas)
set(openblas_DIR D:/OpenBLAS-0.3.25-x64-64/lib/cmake/openblas)
find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
find_package(pybind11 REQUIRED CONFIG)
find_package(xtensor REQUIRED)
find_package(xtensor-python REQUIRED)

pybind11_add_module(libsvm main.cpp svm.h svm.cpp)
target_link_libraries(libsvm PUBLIC pybind11::module Python::NumPy)
target_compile_definitions(libsvm PRIVATE VERSION_INFO=0.1.0)